test_regress/t/t_vlt_syntax_bad.vlt
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed into the Public Domain, for any use,
// without warranty, 2010 by Wilson Snyder.

`verilator_config

public_flat_rw -module "t" -var "x"
public -module "t" @(posedge clk)
isolate_assignments -module "t"
sc_clock -module "t" -function "f"